# faq_server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt  rebuild_tag.sh
common/: .head.h.swp  .mysql_connection.h.swp  .reactor_core.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  Session.vim  actions_mananger.cpp  actions_mananger.h  aliased_buf.h  cmake_install.cmake  daemon.h  data_worker.cpp  data_worker.h  db_connection_pool.cpp  db_connection_pool.h  db_thread.h  game_packet.cpp  game_packet.h  head.h  job_factory.cpp  job_factory.h  listener.h  lock.h  mysql_connection.cpp  mysql_connection.h  net_util.cpp  net_util.h  object_pool.h  packet.h  reactor.h  reactor_core.cpp  reactor_core.h  server_application.cpp  server_application.h  service.h  session_manager.h  singleton.h  socket.cpp  socket.h  (+16 more)
db_server/: .db_client.cpp.swp  .work_manager.cpp.swp  CDBTaskManage.cpp  CDBTaskManage.h  CDBhandlerJob.cpp  CDBhandlerJob.h  CMakeLists.txt  CServerManage.cpp  CServerManage.h  DBConnectionPool.cpp  DBConnectionPool.h  DBConnectionPool_test.cpp  DBEvent.h  Makefile  action_data_work_message.cpp  action_heart_message.cpp  cmake_install.cmake  data_worker.cpp  data_worker.h  db_application.cpp  db_application.h  db_client.cpp  db_client.h  db_connection_pool.cpp  db_connection_pool.h  db_service.cpp  db_service.h  object_pool.h  work_manager.cpp  work_manager.h
game_exe/: bin_list.xml  core  db_server  gate_server  server.xml  unit_test
gate_server/: .action_login_message.cpp.swp  .db_connection.cpp.swp  .gate_client.cpp.swp  .gate_client.h.swp  CMakeLists.txt  Makefile  action_attack_npc_message.cpp  action_heart_message.cpp  action_login_message.cpp  action_move_message.cpp  client_service.cpp  client_service.h  cmake_install.cmake  config_manager.cpp  config_manager.h  db_connection.cpp  db_connection.h  fighter.cpp  fighter.h  game_define.h  gate_application.cpp  gate_application.h  gate_client.cpp  gate_client.h  item.cpp  item.h  logic_player.cpp  logic_player.h  main.cpp  map_manager.cpp  map_manager.h  npc_object.cpp  npc_object.h  player_manager.cpp  player_manager.h  prototype.h  state.cpp  state.h  test.h
message/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  db_message.pb.cc  db_message.pb.h  db_message.proto  db_message_define.h  gen_message.sh  message.pb.cc  message.pb.h  message.proto  message_define.h  role_info.pb.cc  role_info.pb.h  role_info.proto  sql_define.cpp  sql_define.h  tb_user.cpp  tb_user.h  tb_user.pb.cc  tb_user.pb.h  tb_user.proto
prototype/: .npc_data_prototype.cpp.swp  .npc_data_prototype.h.swp  CMakeLists.txt  Makefile  cmake_install.cmake  game_define.h  game_prototype.cpp  game_prototype.h  item_data.pb.cc  item_data.pb.h  item_prototype.cpp  item_prototype.h  npc_data.pb.cc  npc_data.pb.h  npc_data_prototype.cpp  npc_data_prototype.h
sql/: bak.sql  gen.sh  orm.php  (+5 more)
(+71 files in other folders)
